--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@modelcontextprotocol/sdk": "^0.5.0",
     "node-fetch": "^3.3.2"
   },
+  "devDependencies": {
+    "vitest": "^3.2.4"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
