--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "start:jira": "node src/jira-server.js",
     "start:confluence": "node src/confluence-server.js",
     "dev:jira": "node --inspect src/jira-server.js",
-    "dev:confluence": "node --inspect src/confluence-server.js"
+    "dev:confluence": "node --inspect src/confluence-server.js",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^3.2.4",
     "vitest": "^3.2.4"
   },
   "engines": {
